apps/nextcloud-fpm/testing/resources/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nextcloud
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "16G"
spec:
  tls:
  - hosts:
    - test.jz-c.org
    secretName: production-test-jz-c-org-tls
  rules:
  - host: test.jz-c.org
    http:
      paths:
      - backend:
          serviceName: nextcloud
          servicePort: 80
